@@ -1,3 +1,9 @@
+2010-10-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-extract-xmlns): if the node has a
+	targetNamespace attribute define a "tns" alias for that namespace.
+	(soap-wk2l): documentation update
+
 2010-10-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* jira2.el (jira2-link-issue): add the "X-Atlassian-Token" header
